WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246079
Fix WebCodecsVideoDecoder isValidDecoderConfig
https://bugs.webkit.org/show_bug.cgi?id=246079
Summary
Fix WebCodecsVideoDecoder isValidDecoderConfig
youenn fablet
Reported
2022-10-05 06:28:01 PDT
Fix WebCodecs isValidDecoderConfig
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-05 06:28:35 PDT
<
rdar://problem/100805259
>
youenn fablet
Comment 2
2022-10-05 09:04:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5035
EWS
Comment 3
2022-10-07 03:41:50 PDT
Committed
255260@main
(b02ab78bd7bb): <
https://commits.webkit.org/255260@main
> Reviewed commits have been landed. Closing PR #5035 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug